fix(styles): prevents element shifting when TextField is focused and/or hovered

--- a/packages/styles/forms.css
+++ b/packages/styles/forms.css
@@ -72,9 +72,10 @@ textarea:focus,
 [role='listbox']:focus,
 [role='spinbutton']:focus {
   outline: 0;
-  border: 2px solid var(--field-border-color-focus);
-  box-shadow: 0px 0px 4px var(--field-border-color-focus-glow),
-    inset 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border: 1px solid var(--field-border-color-focus);
+  box-shadow: 0px 0px 5px var(--field-border-color-focus-glow),
+    inset 0px 1px 2px rgba(0, 0, 0, 0.05),
+    0 0 0 1px var(--field-border-color-focus);
 }
 
 input:hover,
@@ -98,7 +99,10 @@ textarea:focus:hover,
 [aria-haspopup='listbox']:focus:hover,
 [role='listbox']:focus:hover,
 [role='spinbutton']:focus:hover {
-  border: 2px solid var(--field-border-color-focus-hover);
+  border: 1px solid var(--field-border-color-focus-hover);
+  box-shadow: 0px 0px 5px var(--field-border-color-focus-hover),
+    inset 0px 1px 2px rgba(0, 0, 0, 0.05),
+    0 0 0 1px var(--field-border-color-focus-hover);
 }
 
 input.Field--has-error,
